--- a/content/docs/0.0.1/11.6-control-visibility-diff-file-pub.md
+++ b/content/docs/0.0.1/11.6-control-visibility-diff-file-pub.md
@@ -12,7 +12,7 @@ To use the module in a different file, write mod followed by the name of the fil
 - Implicit Declaration 
 A block of code put in a file without wrapping in a mod block implicitly declares a module.
 
-![](https://raw.githubusercontent.com/sangam14/RustLabs/master/img/module-implicit.png)
+![](/img/diagrams/119.module-implicit.png)
 
 -  Import the module
 ```
@@ -29,8 +29,8 @@ Where `x` can be any construct within the module, i.e., function, array, trait, 
 # Explicit Declaration 
 
 The code in a file is wrapped within the mod block. This explicitly declares a module.
+![](/img/diagrams/120.module-explicit.png)
 
-![](https://raw.githubusercontent.com/sangam14/RustLabs/master/img/module-explicit.png)
 
 -  Import the module
  ```
@@ -121,14 +121,28 @@ I am a public function in my_mod.rs
 
 Test your understanding of modules in different files.
 
-1. Implicit declaration of a module in a different file makes them public by default.<br>
-A) True <br>
-B) False <br>
 
-2.For explicitly defining a module in a different file, and accessing it in a different file, make it? <br>
-A) public using pub <br>
-B) private <br>
 
+{{<quizdown>}}
+
+---
+primaryColor: steelblue
+secondaryColor: '#e8e8e8'
+textColor: black
+shuffleQuestions: false
+shuffleAnswers: true
+locale: en
+---
+
+# Implicit declaration of a module in a different file makes them public by default.
+- [ ] True 
+- [ ] False 
+
+# For explicitly defining a module in a different file, and accessing it in a different file, make it? 
+- [ ] public using pub 
+- [ ] private 
+
+{{</quizdown>}}
 
 
 
